# scripts

./: .gitignore  .mailmap  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docker.exam/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  docker.exam-build.sh  docker.exam-exec.sh  docker.exam-run.py  sopel_bot.py
etc/: pylintrc  vimrc
etc/wtf/: config.yml
rpi_admin/: .gitignore  README.md  abgaben_einsammeln.yml  hosts  hosts.example  playbook.yml  setup.yml  uhrzeit.txt
